# kn_wheel_group

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml
etc/: license-header.txt
src/: CMakeLists.txt
src/knCoordinatedWheelLocomotion/: CMakeLists.txt  CoordinatedWheelLocomotion.cpp  CoordinatedWheelLocomotion.h  FastestSteerAndDriveCWL.cpp  FastestSteerAndDriveCWL.h  FsdMatlabPlots.cpp  FsdMatlabPlots.h  HalfTrapProfile.cpp  HalfTrapProfile.h  TrapezoidProfile.cpp  TrapezoidProfile.h  baselinePath.m  baselinePathVars.m  knCoordinatedWheelLocomotion_Export.h  limitPlot.m  pathAll.sh  test_Fsd.cpp  test_FsdMatrix.cpp  test_TrapezoidProfile.cpp  test_will_fail.sh  test_will_pass.sh
src/knMotor/: CMakeLists.txt  HwReactor.cpp  HwReactor.h  Motor.cpp  Motor.h  MotorBase.cpp  MotorBase.h  MotorFuture.cpp  MotorFuture.h  MotorGroup.cpp  MotorGroup.h  MotorGroupSample.cpp  MotorGroupSample.h  MotorParameters.xml  MotorProfile.cpp  MotorProfile.h  MotorSample.cpp  MotorSample.h  MotorState.cpp  MotorState.h  WheelGroup.cpp  WheelGroup.h  WheelGroupSample.cpp  WheelGroupSample.h  knMotor_Export.h  testMotorErrors.cpp
src/knMotorImpl/: CMakeLists.txt  MotorGroupImpl.cpp  MotorGroupImpl.h  MotorGroupRepository.cpp  MotorGroupRepository.h  MotorHelper.cpp  MotorHelper.h  MotorImpl.cpp  MotorImpl.h  MotorRepository.cpp  MotorRepository.h  WheelGroupImpl.cpp  WheelGroupImpl.h  WheelGroupRepository.cpp  WheelGroupRepository.h  knMotorImpl_Export.h
src/knMotorSvcs/: CMakeLists.txt  MotorSvcsParameters.xml  VelocityController.cpp  VelocityController.h  WheelGroupJointProvider.cpp  WheelGroupJointProvider.h  WheelGroupSvc.cpp  WheelGroupSvc.h  knMotorSvcs_Export.h
src/knProtoMotor/: CMakeLists.txt  MotorInterface.cpp  MotorInterface.h  ProtoMotorParameters.xml  WheelGroup.cpp  WheelGroup.h  knProtoMotor_Export.h  motorServer.cpp  profile.txt  profile0.txt  profile2.txt  profile3.txt  testMotorInterface.cpp  trajectory.txt  trajectory2.txt
src/knSimMotor/: CMakeLists.txt  SimMotor.cpp  SimMotor.h  SimMotorGroup.cpp  SimMotorGroup.h  SimMotorGroupBase.cpp  SimMotorGroupBase.h  SimMotorParameters.xml  SimWheelGroup.cpp  SimWheelGroup.h  SimWheelGroupSvc.cpp  SimWheelGroupSvc.h  knSimMotor_Export.h  testMotorTrajectories.cpp  testMotorTrapecoidal.cpp
src/knWheelGroupNodelets/: AceSvcNodelet.cpp  AceSvcNodelet.h  CMakeLists.txt  ProtoWheelGroupNodelet.cpp  ProtoWheelGroupNodelet.h  SimWheelGroupNodelet.cpp  SimWheelGroupNodelet.h  WheelGroupIoNodelet.cpp  WheelGroupIoNodelet.h
